k8s/services/meet-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meet-service
  namespace: shopno-platform
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: meet-service
  ports:
    - name: http
      port: 80
      targetPort: http
