k8s/services/meet-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meet-service
  namespace: shopno-platform
spec:
  ingressClassName: nginx
  rules:
    - host: api.shopnoltd.dpdns.org
      http:
        paths:
          - path: /api/v1/meet
            pathType: Prefix
            backend:
              service:
                name: meet-service
                port:
                  number: 80
